user doc interface created

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,5 +5,8 @@
     "moduleResolution": "NodeNext",
     "strict": true,
     "skipLibCheck": true
+    // "resolveJsonModule": true,
+    // "allowJs": true,
+    // "esModuleInterop": true
   }
 }
