--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.25.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
